package com.marsrover.model;

import java.util.ArrayList;

public class CircularPlateau {
    private int plateauMaxRadius;
    private ArrayList<MarsRover> rovers;

    public CircularPlateau(int plateauMaxRadius) {
        this.plateauMaxRadius = plateauMaxRadius;

    }


}
