package com.marsrover.model;

public enum CompassPoint {
    //CompassPoint.N
    N,S,E,W
}
