package com.marsrover.model;

import java.util.ArrayList;

public class MissionControl {
    public ArrayList<MarsRover> rovers;
}
